Fixed HUTN using get(0) instead of getFirst() for EVL fixes.